- add start script - add 3 new posts (reactive, books, house-market) - move to React based page for JDK - remove jdk9 module build